--- a/lab01/exercise01/style.css
+++ b/lab01/exercise01/style.css
@@ -6,6 +6,23 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+section {
+    border: blue;
+    border-width: 1.5px;
+    border-style: solid;
+    display: block;
+    width: 250px;
+ }
+
+ p {
+    margin: 3px;
+}
+
+button {
+    margin: 5px;
+}
+
 /*
 Add some style blocks below this line to style the card.
 */
